# kudchuet

./: .gitignore  .gitmodules  Cargo.toml  README.md  build_examples.bat
.cargo/: config.toml
docs/backgammon/: backgammon.d.ts  backgammon.js  backgammon_bg.wasm.d.ts  index.html
docs/chess/: chess.d.ts  chess.js  index.html
docs/chinese_checkers/: chinese_checkers.js  chinese_checkers_bg.wasm.d.ts  index.html
docs/three_musketeers/: index.html  three_musketeers.js
games/abalone/: Cargo.toml  index.html
games/abalone/src/: bitboard.rs  fen.rs  game.rs  gui.rs  main.rs  mod.rs  rules.rs
games/awale/: Cargo.toml  index.html
games/awale/src/: game.rs  gui.rs  ihm_mancala.rs  lib.rs  main.rs  mancala.rs  rules.rs
games/backgammon/: Cargo.toml  index.html
games/backgammon/src/: game.rs  gui.rs  lib.rs  main.rs  notation.rs  rules.rs
games/bagh_chal/: Cargo.toml  index.html
games/bagh_chal/src/: bitboard.rs  game.rs  gui.rs  main.rs  rules.rs
games/checkers/: Cargo.toml  index.html
games/checkers/src/: bitboards.rs  fen.rs  game.rs  gui.rs  lib.rs  main.rs  rules.rs
games/chess/: Cargo.toml  build.rs
games/chess/src/: chess.rs  chess2.rs  evaluation.rs  fen.rs  gui.rs  lib.rs  magic_tables.rs  main.rs  mychess.rs  pext_tables.rs  rules.rs  san.rs
games/chinese_checkers/: Cargo.toml  index.html
games/chinese_checkers/src/: bitboard.rs  fen.rs  game.rs  gui.rs  lib.rs  main.rs  rules.rs
games/connect4/: Cargo.toml  index.html
games/connect4/src/: bitboard.rs  ex_connect4.rs  game.rs  gui.rs  ihm.rs  lib.rs  main.rs  rules.rs
games/diaballik/: Cargo.toml  index.html
games/diaballik/src/: bitboard.rs  game.rs  gui.rs  lib.rs  main.rs  rules.rs
games/footboard/: Cargo.toml  index.html
games/footboard/src/: bitboard.rs  game.rs  gui.rs  main.rs  rules.rs
games/gomoku/: Cargo.toml  index.html
games/gomoku/src/: bitboard.rs  game.rs  gui.rs  lib.rs  main.rs  pattern.rs  rules.rs
games/hare_and_hounds/: Cargo.toml  index.html
games/hare_and_hounds/src/: game.rs  gui.rs  lib.rs  main.rs  rules.rs
games/neutron/: Cargo.toml  build.rs  index.html
games/neutron/src/: bitboard.rs  game.rs  gui.rs  lib.rs  main.rs  pext_tables.rs  rules.rs
games/reversi/: Cargo.toml  index.html
games/reversi/src/: bitboard.rs  game.rs  gui.rs  ihm.rs  lib.rs  main.rs  rules.rs
games/three_musketeers/: Cargo.toml  serve.bat
games/three_musketeers/src/: bitboard.rs  game.rs  gui.rs  main.rs  rules.rs
games/yote/: Cargo.toml  index.html
games/yote/src/: bitboard.rs  game.rs  gui.rs  ihm.rs  main.rs  rules.rs
kudchuet/: Cargo.toml  build.rs
kudchuet/benches/: minimax.rs
kudchuet/examples/: connect4.rs  dice_race.rs  mancala.rs  ttt.rs
kudchuet/src/: lib.rs  utils.rs
kudchuet/src/abalone/: bitboard.rs  fen.rs  game.rs  gui.rs  ihm.rs  mod.rs  rules.rs
kudchuet/src/ai/: cli_engine.rs  engine_manager.rs  external_engine.rs  incomplete_info_searcher.rs  internal_engine.rs  mod.rs  uci.rs
kudchuet/src/ai/minimax/: README  common.rs  gametree.rs  interface.rs  iterative.rs  mcts.rs  mcts_node.rs  minimax.rs  mod.rs  random.rs  sync_util.rs  table.rs  util.rs  ybw.rs
kudchuet/src/awale/: game.rs  gui.rs  ihm_mancala.rs  mancala.rs  mod.rs  rules.rs
kudchuet/src/backgammon/: game.rs  gui.rs  mod.rs  notation.rs  rules.rs
kudchuet/src/bagh_chal/: game.rs  gui.rs  mod.rs
kudchuet/src/checkers/: bitboards.rs  fen.rs  game.rs  gui.rs  mod.rs  rules.rs
kudchuet/src/chess/: fen.rs  gui.rs  mod.rs  mychess.rs  pext_tables.rs  san.rs
kudchuet/src/chinese_checkers/: bitboard.rs  fen.rs  game.rs  gui.rs  mod.rs
kudchuet/src/common/: bitboards.rs  mod.rs
kudchuet/src/common/ai/: cli_engine.rs  engine_manager.rs  expectiminimax.rs  expectiminimax_alphabeta.rs  external_engine.rs  incomplete_info_searcher.rs  internal_engine.rs  mod.rs  uci.rs
kudchuet/src/common/gui/: board_app.rs  board_drawer.rs  game_state_manager.rs  input_handler.rs  mod.rs  options_panel.rs  shapes.rs
kudchuet/src/connect4/: ex_connect4.rs  game.rs  gui.rs  ihm.rs  mod.rs
kudchuet/src/diaballik/: game.rs  gui.rs  mod.rs
kudchuet/src/footboard/: game.rs  gui.rs  mod.rs
kudchuet/src/gomoku/: game.rs  gui.rs  mod.rs
kudchuet/src/gui/: board_app.rs  board_drawer.rs  game_state_manager.rs  input_handler.rs  mod.rs  options_panel.rs  shapes.rs
kudchuet/src/hare_and_hounds/: game.rs  gui.rs  mod.rs
kudchuet/src/neutron/: game.rs  gui.rs  mod.rs  pext_tables.rs
kudchuet/src/reversi/: game.rs  gui.rs  ihm.rs  mod.rs
kudchuet/src/three_musketeers/: game.rs  gui.rs  mod.rs
kudchuet/src/yote/: game.rs  gui.rs  ihm.rs  mod.rs
kudchuet/tests/: strategies.rs  ttt.rs
