[package]
name = "kudchuet"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#bitboard = {path="../bitboards/bitboard"}
#bitboard_proc_macro = {path="../bitboards/bitboard_proc_macro"}
#magic_bitboard_proc_macro = {path="../magic_bitboard_proc_macro"}
#minimax = "0.5"
#minimax = {path="../minimax"}

eframe = "0.34"
egui = { version = "0.34", features=["persistence"] }
#egui_field_editor = {git = "https://github.com/ultrasuperpingu/egui_field_editor.git", features=["filepicker"] }
egui_field_editor = {path="../../egui_inspect/egui_field_editor", features=["filepicker"] }
#egui_field_editor = "0.5"

instant = { version = "0.1", features = ["wasm-bindgen"] }
fastrand = "2.4"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
strum = { version = "0.28", features = ["derive"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
num_cpus = "1.0"
rayon = "^1.5"


[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
#chrono = "0.4"
#rand = "0.9.0"
bencher = "0.1"

[build-dependencies]
bitboard = {path="../bitboards/bitboard"}
bitboard_proc_macro = {path="../bitboards/bitboard_proc_macro"}
num-traits = "0.2"

[[bench]]
name = "minimax"
harness = false

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
target-cpu = "native"
panic = "abort"
incremental = false
debug = false

