[package]
name = "awale"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34", features=["persistence"] }
kudchuet = { path = "../../kudchuet" }
#minimax = "0.5"
minimax = {path="../../minimax"}


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }

[lib]
name = "awale"

[[bin]]
name = "awale"
path = "src/main.rs"